--- a/formulaire.css
+++ b/formulaire.css
@@ -60,7 +60,6 @@ main {
   outline: 0;
   border-color: #777;
 }
-
 .form-control.success input {
   border-color: #2ecc71;
 }
@@ -98,7 +97,6 @@ main {
   left: 0;
   visibility: hidden;
 }
-
 .form-control.success samp {
   visibility: visible;
 }
@@ -118,6 +116,87 @@ div.sexuality {
   display: flex;
   flex-direction: row;
   gap: 80px;
+}
+.group input {
+  width: 80%;
+  margin: 24px 0px -21px -33px;
+}
+.group {
+  display: flex;
+  flex-direction: column;
+}
+select {
+  padding: 15px;
+  border-radius: 20px;
+}
+.slider {
+  position: relative;
+  width: 40%;
+  overflow: hidden;
+}
+.images {
+  display: flex;
+  width: 100%;
+}
+.images img {
+  height: 400px;
+  width: 100%;
+  transition: all 0.15s ease;
+}
+.images input {
+  display: none;
+}
+.dots {
+  display: flex;
+  justify-content: center;
+  margin: 5px;
+}
+.dots label {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  border: solid #fff 3px;
+  cursor: pointer;
+  transition: all 0.15s ease;
+  margin: 5px;
+}
+.dots label:hover {
+  background: rgb(0, 0, 0);
+}
+#img10:checked ~ .m1 {
+  margin-left: 0;
+}
+#img20:checked ~ .m2 {
+  margin-left: -100%;
+}
+#img30:checked ~ .m3 {
+  margin-left: -200%;
+}
+#img40:checked ~ .m4 {
+  margin-left: -300%;
+}
+.F{
+  gap:10px ;
+}
+@media screen and (max-width: 992px){
+  body {
+    font-family: "Open Sans", sans-serif;
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    padding: 0;
+  }  
+  .container {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+    max-width: 100%;
+  }  
+  main {
+    width: 50%;
+  }  
+
 }
 /* button.m {
   transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -206,81 +285,3 @@ button.o:focus {
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   transform: translateY(-2px);
 } */
-.group input {
-  width: 80%;
-  margin: 24px 0px -21px -33px;
-}
-.group {
-  display: flex;
-  flex-direction: column;
-}
-select {
-  padding: 15px;
-  border-radius: 20px;
-}
-.slider {
-  position: relative;
-  width: 40%;
-  overflow: hidden;
-}
-.images {
-  display: flex;
-  width: 100%;
-}
-.images img {
-  height: 400px;
-  width: 100%;
-  transition: all 0.15s ease;
-}
-.images input {
-  display: none;
-}
-.dots {
-  display: flex;
-  justify-content: center;
-  margin: 5px;
-}
-.dots label {
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  border: solid #fff 3px;
-  cursor: pointer;
-  transition: all 0.15s ease;
-  margin: 5px;
-}
-.dots label:hover {
-  background: rgb(0, 0, 0);
-}
-#img10:checked ~ .m1 {
-  margin-left: 0;
-}
-#img20:checked ~ .m2 {
-  margin-left: -100%;
-}
-#img30:checked ~ .m3 {
-  margin-left: -200%;
-}
-#img40:checked ~ .m4 {
-  margin-left: -300%;
-}
-@media screen and (max-width: 992px){
-  body {
-    font-family: "Open Sans", sans-serif;
-    display: flex;
-    flex-direction: row;
-    margin: 0;
-    padding: 0;
-  }  
-  .container {
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    overflow: hidden;
-    max-width: 100%;
-  }  
-  main {
-    width: 50%;
-  }  
-
-}
